[tool.poetry]
name = "snacks-api"
version = "0.1.0"
description = ""
authors = ["AnasAbuHamideh <anas.abuhamida@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.4"
djangorestframework-jsonapi = "^5.0.0"
django-filter = "^21.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
